# arxiv-sanity-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  alembic.ini  pyproject.toml
.planning/: .continue-here.md  (+9 more)
workspace/projects/arxiv-sanity-mcp/: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
workspace/projects/arxiv-sanity-mcp/.github/workflows/: ci.yml
workspace/projects/arxiv-sanity-mcp/.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
workspace/projects/arxiv-sanity-mcp/.planning/phases/01-metadata-substrate/: 01-01-SUMMARY.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md
workspace/projects/arxiv-sanity-mcp/.planning/phases/02-workflow-state/: 02-01-PLAN.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-RESEARCH.md  02-VALIDATION.md
workspace/projects/arxiv-sanity-mcp/.planning/phases/03-interest-modeling-ranking/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-SUMMARY.md  03-CONTEXT.md  03-VALIDATION.md  03-VERIFICATION.md
workspace/projects/arxiv-sanity-mcp/.planning/phases/04-enrichment-adapters/: 04-01-PLAN.md  04-02-PLAN.md  04-RESEARCH.md  04-VALIDATION.md
workspace/projects/arxiv-sanity-mcp/.planning/phases/04.1-mcp-v1-expose-existing-services-as-mcp-tools-and-resources/: 04.1-01-SUMMARY.md  04.1-03-PLAN.md  04.1-VERIFICATION.md
workspace/projects/arxiv-sanity-mcp/.planning/research/: ARCHITECTURE.md  FEATURES.md  SUMMARY.md
workspace/projects/arxiv-sanity-mcp/alembic/versions/: 002_workflow_tables.py  006_enrichment_composite_pk.py  007_add_seen_triage_state.py  008_content_variants_table.py
workspace/projects/arxiv-sanity-mcp/data/: categories.toml
workspace/projects/arxiv-sanity-mcp/docs/: 06-mcp-surface-options.md  08-evaluation-and-experiments.md  10-open-questions.md
workspace/projects/arxiv-sanity-mcp/src/arxiv_mcp/: __init__.py  cli.py  config.py
workspace/projects/arxiv-sanity-mcp/tests/: conftest.py
workspace/projects/arxiv-sanity-mcp/tests/fixtures/: arxiv_raw_sample.xml  oai_dc_sample.xml
workspace/projects/arxiv-sanity-mcp/tests/test_content/: conftest.py  test_adapter.py  test_html_fetcher.py  test_rights.py  test_service.py
workspace/projects/arxiv-sanity-mcp/tests/test_enrichment/: test_adapter.py  test_cli.py  test_service.py
workspace/projects/arxiv-sanity-mcp/tests/test_ingestion/: test_arxiv_api.py  test_oai_pmh.py  test_parsers.py
workspace/projects/arxiv-sanity-mcp/tests/test_interest/: conftest.py  test_profiles.py  test_ranking.py  test_suggestions.py
workspace/projects/arxiv-sanity-mcp/tests/test_mcp/: conftest.py  test_content_tool.py  test_discovery_tools.py  test_docstrings.py  test_prompts.py  test_workflow_tools.py
workspace/projects/arxiv-sanity-mcp/tests/test_models/: test_paper.py
workspace/projects/arxiv-sanity-mcp/tests/test_search/: conftest.py  test_pagination.py
workspace/projects/arxiv-sanity-mcp/tests/test_workflow/: conftest.py  test_collections.py  test_export.py  test_models.py  test_search_augment.py  test_triage.py  test_watches.py
(+743 files in other folders)
