[project]
name = "arxiv-mcp"
version = "0.1.0"
description = "MCP-native arXiv research discovery substrate"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "oaipmh-scythe>=0.14",
    "lxml>=5.3",
    "httpx>=0.28",
    "click>=8.1",
    "structlog>=24.4",
    "rich>=13.9",
    "python-dotenv>=1.0",
]

[project.scripts]
arxiv-mcp = "arxiv_mcp.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arxiv_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "ruff>=0.9",
    "mypy>=1.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 30

[tool.ruff]
target-version = "py313"
line-length = 100
