[project]
name = "arxiv-sanity-mcp"
version = "0.1.0"
description = "MCP-native arXiv research discovery substrate"
readme = "README.md"
requires-python = ">=3.13"
authors = [{name = "Logan Rooks"}]
license = "MIT"
keywords = ["arxiv", "mcp", "research", "discovery", "papers", "academic", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "oaipmh-scythe>=0.14",
    "lxml>=5.3",
    "beautifulsoup4>=4.12",
    "httpx>=0.28",
    "click>=8.1",
    "structlog>=24.4",
    "rich>=13.9",
    "python-dotenv>=1.0",
    "python-dateutil>=2.9.0.post0",
    "mcp[cli]>=1.25,<2",
]

[project.scripts]
arxiv-mcp = "arxiv_mcp.cli:cli"

[project.urls]
Homepage = "https://github.com/loganrooks/arxiv-sanity-mcp"
Repository = "https://github.com/loganrooks/arxiv-sanity-mcp"
Issues = "https://github.com/loganrooks/arxiv-sanity-mcp/issues"
Changelog = "https://github.com/loganrooks/arxiv-sanity-mcp/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arxiv_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "respx>=0.22",
    "ruff>=0.9",
    "mypy>=1.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 30

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
per-file-ignores = {"alembic/versions/*.py" = ["F401"], "src/arxiv_mcp/cli.py" = ["E402"]}
